draft of working index.html page

--- a/index.html
+++ b/index.html
@@ -58,24 +58,24 @@
   <div id="main-container" class="container">
     <section class="main-section">
       <h1>Hey, I'm Kevin Gorham</h1>
+      <img class="img-fluid float-left auth-image" src="assets/images/luke-headshot.jpg" alt="Luke Headshot" width="460" height="345">
+      <!-- <img src="assets/images/luke-headshot.jpg" class="auth-image" id="headshot" alt="Kevin Gorham"> -->
 
-      <img src="assets/images/HeadShot.jpg" class="auth-image" alt="Kevin Gorham" width="207" height="206">
+      <!-- <p>After six years managing a commercial aquaponic farm, I've made the leap from fish farming to favicons and FAQs. Now a fledgling full stack/MERN stack developer, I'm seeking a position in the San Diego area.</p> -->
+      <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Fugit, exercitationem! Qui voluptas, sapiente repellendus perferendis recusandae quia porro fugit reiciendis assumenda doloremque necessitatibus quod atque et! Cum quae laudantium omnis?</p>
+      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptates vel aliquam pariatur suscipit quaerat facilis repudiandae totam exercitationem, excepturi eum in, consequuntur delectus at esse nostrum eaque dolore soluta voluptatibus.</p>
 
-      <p>After six years managing a commercial aquaponic farm, I've made the leap from fish farming to favicons and FAQs. Now a fledgling full stack/MERN stack developer, I'm seeking a position in the San Diego area.</p>
-
-      <p></p>
-
-      <p>I value authenticity, balance, kindness, and adventure.</p>
-
-      <p>Outside of work I can be found rock climbing, camping, cooking, or chasing my dog, Luke. </p>
+      <!-- <p>I value authenticity, balance, kindness, and adventure.</p>
+      <p>Outside of work I can be found rock climbing, camping, cooking, or chasing my dog, Luke. </p> -->
+      <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Corporis dolore delectus pariatur cupiditate corrupti unde, doloribus hic excepturi laudantium eos blanditiis fugiat! Ipsum labore sint vel. Sunt earum debitis ex. </p>
 
     </section>
 
   </div>
 
-  <footer>
+  <footer class="fixed-bottom">
     <div class="container">
-      Copyjustify-content-right &copy;
+      &copy;
     </div>
   </footer>
 </body>
