fixed headers and footers on portfolio.html and contact.html

--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
   <meta charset="UTF-8">
   <title>About | Your Name</title>
 
-  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.2/css/all.css" integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr" crossorigin="anonymous">
+  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.2/css/all.css"
+    integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr" crossorigin="anonymous">
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
     integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
   <link rel="stylesheet" type="text/css" href="assets/css/style.css">
@@ -42,7 +43,7 @@
           <ul class="navbar-nav ml-auto">
             <li class="nav-item">
               <a class="nav-link" href="portfolio.html"><i class="fab fa-creative-commons-nd"></i>
-                </a>
+              </a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="contact.html"><i class="far fa-envelope"></i></a>
@@ -57,17 +58,24 @@
 
   <div id="main-container" class="container">
     <section class="main-section">
-      <h1>Hey, I'm Kevin Gorham</h1>
-      <img class="img-fluid float-left auth-image" src="assets/images/luke-headshot.jpg" alt="Luke Headshot" width="460" height="345">
+      <h1>Hey, I'm Kevin</h1>
+      <img class="img-fluid float-left auth-image" src="assets/images/luke-headshot.jpg" alt="Luke Headshot" width="460"
+        height="345">
       <!-- <img src="assets/images/luke-headshot.jpg" class="auth-image" id="headshot" alt="Kevin Gorham"> -->
 
       <!-- <p>After six years managing a commercial aquaponic farm, I've made the leap from fish farming to favicons and FAQs. Now a fledgling full stack/MERN stack developer, I'm seeking a position in the San Diego area.</p> -->
-      <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Fugit, exercitationem! Qui voluptas, sapiente repellendus perferendis recusandae quia porro fugit reiciendis assumenda doloremque necessitatibus quod atque et! Cum quae laudantium omnis?</p>
-      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptates vel aliquam pariatur suscipit quaerat facilis repudiandae totam exercitationem, excepturi eum in, consequuntur delectus at esse nostrum eaque dolore soluta voluptatibus.</p>
+      <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Fugit, exercitationem! Qui voluptas, sapiente
+        repellendus perferendis recusandae quia porro fugit reiciendis assumenda doloremque necessitatibus quod atque
+        et! Cum quae laudantium omnis?</p>
+      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptates vel aliquam pariatur suscipit quaerat
+        facilis repudiandae totam exercitationem, excepturi eum in, consequuntur delectus at esse nostrum eaque dolore
+        soluta voluptatibus.</p>
 
       <!-- <p>I value authenticity, balance, kindness, and adventure.</p>
       <p>Outside of work I can be found rock climbing, camping, cooking, or chasing my dog, Luke. </p> -->
-      <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Corporis dolore delectus pariatur cupiditate corrupti unde, doloribus hic excepturi laudantium eos blanditiis fugiat! Ipsum labore sint vel. Sunt earum debitis ex. </p>
+      <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Corporis dolore delectus pariatur cupiditate corrupti
+        unde, doloribus hic excepturi laudantium eos blanditiis fugiat! Ipsum labore sint vel. Sunt earum debitis ex.
+      </p>
 
     </section>
 
@@ -75,7 +83,7 @@
 
   <footer class="fixed-bottom">
     <div class="container">
-      &copy;
+      Copyright&copy;
     </div>
   </footer>
 </body>
