--- a/portfolio.html
+++ b/portfolio.html
@@ -4,7 +4,8 @@
 <head>
   <meta charset="UTF-8">
   <title>Portfolio | Your Name</title>
-  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.2/css/all.css" integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr" crossorigin="anonymous">
+  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.2/css/all.css"
+    integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr" crossorigin="anonymous">
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
     integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
   <link rel="stylesheet" type="text/css" href="assets/css/style.css">
@@ -47,7 +48,7 @@
           <ul class="navbar-nav ml-auto">
             <li class="nav-item">
               <a class="nav-link" href="portfolio.html"><i class="fab fa-creative-commons-nd"></i>
-                </a>
+              </a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="contact.html"><i class="far fa-envelope"></i></a>
@@ -61,7 +62,7 @@
   <div id="main-container" class="container">
     <section class="main-section">
       <h1>Portfolio</h1>
-
+      
       <div class="work">
         <img src="assets/images/technics-q-c-640-480-1.jpg" alt="Word Guess">
 
@@ -87,6 +88,7 @@
 
         <h3>Rock Paper Scissors</h3>
       </div>
+
 
     </section>
 
