--- a/portfolio.html
+++ b/portfolio.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="UTF-8">
-  <title>Portfolio | Your Name</title>
+  <title>Portfolio | Kevin Gorham</title>
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.2/css/all.css"
     integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr" crossorigin="anonymous">
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
@@ -25,7 +25,7 @@
 
   <!-- <header id="masthead">
     <div class="container">
-      <a href="index.html" id="logo">Your Name</a>
+      <a href="index.html" id="logo">Kevin Gorham</a>
       <nav>
         <a href="index.html">About</a>
         <a href="portfolio.html">Portfolio</a>
@@ -62,17 +62,29 @@
   <div id="main-container" class="container">
     <section class="main-section">
       <h1>Portfolio</h1>
-      
-      <div class="work">
-        <img src="assets/images/technics-q-c-640-480-1.jpg" alt="Word Guess">
 
-        <h3>Word Guess</h3>
-      </div>
-      <div class="work">
-        <img src="assets/images/technics-q-c-640-480-2.jpg" alt="RPG Game">
+      <!-- First row -->
+      <div class="row">
+        <!-- First column row 1 -->
+        <div class="col-md-4">
+          <div class="work">
+            <img src="assets/images/technics-q-c-640-480-1.jpg" alt="Word Guess">
 
-        <h3>RPG Game</h3>
+            <h3>Word Guess</h3>
+          </div>
+        </div>
+        <!-- Second column row 2 -->
+        <div class="col-md-4">
+          <div class="work">
+            <img src="assets/images/technics-q-c-640-480-2.jpg" alt="RPG Game">
+
+            <h3>RPG Game</h3>
+          </div>
+        </div>
       </div>
+
+
+
       <div class="work">
         <img src="assets/images/technics-q-c-640-480-5.jpg" alt="Trivia Game">
 
