--- a/portfolio.html
+++ b/portfolio.html
@@ -3,6 +3,7 @@
 
 <head>
   <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Portfolio | Kevin Gorham</title>
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.2/css/all.css"
     integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr" crossorigin="anonymous">
@@ -63,47 +64,62 @@
     <section class="main-section">
       <h1>Portfolio</h1>
 
-      <!-- First row -->
-      <div class="row">
-        <!-- First column row 1 -->
-        <div class="col-md-4">
-          <div class="work">
-            <img src="assets/images/technics-q-c-640-480-1.jpg" alt="Word Guess">
-
-            <h3>Word Guess</h3>
+      <div class="container">
+        <!-- Row 1 -->
+        <div class="row">
+          <!-- Row 1 Col 1 -->
+          <div class="col-xs-4">
+            <div class="work">
+              <img class="img-responsive" src="assets/images/technics-q-c-640-480-1.jpg" alt="Word Guess">
+              <h3>Word Guess</h3>
+            </div>
+          </div>
+          <!-- Row 2 Col 2 -->
+          <div class="col-xs-4">
+            <div class="work">
+              <img class="img-responsive" src="assets/images/technics-q-c-640-480-2.jpg" alt="RPG Game">
+              <h3>RPG Game</h3>
+            </div>
           </div>
         </div>
-        <!-- Second column row 2 -->
-        <div class="col-md-4">
-          <div class="work">
-            <img src="assets/images/technics-q-c-640-480-2.jpg" alt="RPG Game">
+      </div>
 
-            <h3>RPG Game</h3>
+      <div class="container">
+        <!-- Row 2 -->
+        <div class="row">
+          <!-- Row 2 Col 1 -->
+          <div class="col-xs-4">
+            <div class="work">
+              <img class="img-responsive" src="assets/images/technics-q-c-640-480-5.jpg" alt="Trivia Game">
+              <h3>Trivia Game</h3>
+            </div>
+          </div>
+          <!-- Row 2 Col 2 -->
+          <div class="col-xs-4">
+            <div class="work">
+              <img class="img-responsive" src="assets/images/technics-q-c-640-480-7.jpg" alt="Rutgers Info Widget">
+              <h3>Rutgers Info Widget</h3>
+            </div>
           </div>
         </div>
       </div>
 
-
-
-      <div class="work">
-        <img src="assets/images/technics-q-c-640-480-5.jpg" alt="Trivia Game">
-
-        <h3>Trivia Game</h3>
+      <div class="container">
+        <!-- Row 3 -->
+        <div class="row">
+          <!-- Row 3 Col 1 -->
+          <div class="col-xs-4">
+            <div class="work">
+              <img class="img-responsive" src="assets/images/technics-q-c-640-480-9.jpg" alt="Rock Paper Scissors">
+              <h3>Rock Paper Scissors</h3>
+            </div>
+          </div>
+        </div>
       </div>
-      <div class="work">
-        <img src="assets/images/technics-q-c-640-480-7.jpg" alt="Rutgers Info Widget">
 
-        <h3>Rutgers Info Widget</h3>
-      </div>
-      <div class="work">
-        <img src="assets/images/technics-q-c-640-480-9.jpg" alt="Rock Paper Scissors">
-
-        <h3>Rock Paper Scissors</h3>
-      </div>
 
 
     </section>
-
   </div>
 
   <footer class="fixed-bottom">
